# MECWS-Volunteer-Operations

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  seed_db.py
.agents/rules/: code-style-guide.md  unit-tests.md
app/: __init__.py  config.py  email.py  email_worker.py  extensions.py  forms.py  models.py  weather.py
app/routes/: admin.py  main.py  visitor.py  volunteer.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  index.html  login.html  profile.html
app/templates/admin/: add_team_member.html  broadcast_email.html  create_event.html  edit_team_member.html  edit_template.html  list_emails.html  list_events.html  list_team.html  list_templates.html  manage_signups.html  view_email.html  view_event.html
app/templates/email/: login_link.html  login_link.txt  new_signup.html  new_signup.txt  signup_confirmed.html  signup_confirmed.txt  signup_pending.html  signup_pending.txt
app/templates/visitor/: create_visitor.html  list_visitors.html
app/templates/volunteer/: available_shifts.html  my_schedule.html
migrations/versions/: d434dbd7e0b6_initial_migration.py
tests/: conftest.py  test_broadcast.py  test_create_event_page.py  test_email_config.py  test_email_list.py  test_email_queue.py  test_event_list_status.py  test_event_status.py  test_features.py  test_models.py  test_profile.py  test_route_logic.py  test_visitor_autocomplete_render.py  test_visitor_edit.py  test_weather.py
